[metadata]
name = pytest
description = pytest: simple powerful testing with Python
long_description = file: README.rst
url = https://docs.pytest.org/en/latest/
project_urls =
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues

author = Holger Krekel, Bruno Oliveira, Ronny Pfannschmidt, Floris Bruynooghe, Brianna Laugher, Florian Bruhin and others

license = MIT license
license_file = LICENSE
keywords = test, unittest
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = no
packages =
    _pytest
    _pytest._code
    _pytest._io
    _pytest.assertion
    _pytest.config
    _pytest.mark

py_modules = pytest
python_requires = >=3.5

[options.entry_points]
console_scripts =
	pytest=pytest:main
	py.test=pytest:main

[build_sphinx]
source-dir = doc/en/
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/en/build/html

[check-manifest]
ignore =
  _pytest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
