[metadata]
name = pytest
description = pytest: simple powerful testing with Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://docs.pytest.org/en/latest/
author = Holger Krekel, Bruno Oliveira, Ronny Pfannschmidt, Floris Bruynooghe, Brianna Laugher, Florian Bruhin and others
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Changelog=https://docs.pytest.org/en/stable/changelog.html
    Twitter=https://twitter.com/pytestdotorg
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues

[options]
packages =
    _pytest
    _pytest._code
    _pytest._io
    _pytest._py
    _pytest.assertion
    _pytest.config
    _pytest.mark
    pytest
py_modules = py
install_requires =
    iniconfig
    packaging
    pluggy>=1.4.0,<2.0
    colorama;sys_platform=="win32"
    exceptiongroup>=1.0.0rc8;python_version<"3.11"
    tomli>=1.0.0;python_version<"3.11"
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.entry_points]
console_scripts =
    pytest=pytest:console_main
    py.test=pytest:console_main

[options.extras_require]
testing =
    argcomplete
    attrs>=19.2.0
    hypothesis>=3.56
    mock
    pygments>=2.7.2
    requests
    setuptools
    xmlschema

[options.package_data]
_pytest = py.typed
pytest = py.typed

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[check-manifest]
ignore =
    src/_pytest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
