[metadata]
platforms = unix, linux, osx, cygwin, win32

[options]
install_requires =
    iniconfig
    packaging
    pluggy>=1.4.0,<2.0
    colorama;sys_platform=="win32"
    exceptiongroup>=1.0.0rc8;python_version<"3.11"
    tomli>=1.0.0;python_version<"3.11"
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0

[options.entry_points]
console_scripts =
    pytest=pytest:console_main
    py.test=pytest:console_main

[options.extras_require]
testing =
    argcomplete
    attrs>=19.2.0
    hypothesis>=3.56
    mock
    pygments>=2.7.2
    requests
    setuptools
    xmlschema

[options.package_data]
_pytest = py.typed
pytest = py.typed
